--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node ./src/node/app.js | bunyan",
+    "start:dev": "nodemon ./src/node/app.js | bunyan",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -19,7 +20,16 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "body-parser": "^1.18.3",
+    "bunyan": "^1.8.12",
     "core-js": "^2.5.4",
+    "cors": "^2.8.5",
+    "csurf": "^1.9.0",
+    "express": "^4.16.4",
+    "express-validator": "^5.3.0",
+    "husky": "^1.2.1",
+    "nodemon": "^1.18.9",
+    "prettier": "^1.15.3",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
@@ -44,5 +54,8 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.6"
+  },
+  "husky": {
+    "pre-commit": ""
   }
 }
