--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
+    "lint:node": "eslint --fix 'src/node/**/*.{js,json}'",
+    "prettier:node": "prettier --write 'src/node/**/*.{js,json}'",
     "e2e": "ng e2e"
   },
   "private": true,
@@ -27,9 +29,6 @@
     "csurf": "^1.9.0",
     "express": "^4.16.4",
     "express-validator": "^5.3.0",
-    "husky": "^1.2.1",
-    "nodemon": "^1.18.9",
-    "prettier": "^1.15.3",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
@@ -39,10 +38,14 @@
     "@angular/cli": "~7.1.3",
     "@angular/compiler-cli": "~7.1.0",
     "@angular/language-service": "~7.1.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
+    "eslint": "^5.10.0",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-prettier": "^3.0.0",
+    "husky": "^1.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.1",
@@ -50,12 +53,20 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "lint-staged": "^8.1.0",
+    "nodemon": "^1.18.9",
+    "prettier": "^1.15.3",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.6"
   },
   "husky": {
-    "pre-commit": ""
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/node/**/*.{js,json}": ["eslint --fix", "prettier --write", "git add"]
   }
 }
