--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "@angular/router": "~7.1.0",
     "body-parser": "^1.18.3",
     "bunyan": "^1.8.12",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.5.4",
     "cors": "^2.8.5",
     "csurf": "^1.9.0",
     "express": "^4.16.4",
     "express-validator": "^5.3.0",
+    "helmet": "^3.15.0",
+    "require-dir": "^1.2.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
@@ -68,8 +71,19 @@
     }
   },
   "lint-staged": {
-    "src/node/**/*.{js,json}": ["eslint --fix", "prettier --write", "git add"],
-    "src/app/**/*.ts}": ["tslint --fix", "prettier --write", "git add"],
-    "src/app/**/*.{ts,json,md,html}": ["prettier --write", "git add"]
+    "src/node/**/*.{js,json}": [
+      "eslint --fix",
+      "prettier --write",
+      "git add"
+    ],
+    "src/app/**/*.ts}": [
+      "tslint --fix",
+      "prettier --write",
+      "git add"
+    ],
+    "src/app/**/*.{ts,json,md,html}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
