--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "name-that-song-angular": {
+    "angular-name-that-song": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -61,18 +61,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "name-that-song-angular:build"
+            "browserTarget": "angular-name-that-song:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "name-that-song-angular:build:production"
+              "browserTarget": "angular-name-that-song:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "name-that-song-angular:build"
+            "browserTarget": "angular-name-that-song:build"
           }
         },
         "test": {
@@ -106,7 +106,7 @@
         }
       }
     },
-    "name-that-song-angular-e2e": {
+    "angular-name-that-song-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -115,11 +115,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "name-that-song-angular:serve"
+            "devServerTarget": "angular-name-that-song:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "name-that-song-angular:serve:production"
+              "devServerTarget": "angular-name-that-song:serve:production"
             }
           }
         },
@@ -135,5 +135,5 @@
       }
     }
   },
-  "defaultProject": "name-that-song-angular"
+  "defaultProject": "angular-name-that-song"
 }
