--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "express": "^4.16.4",
     "express-validator": "^5.3.0",
     "helmet": "^3.15.0",
+    "jsonpath": "^1.0.0",
+    "node-cache": "^4.2.0",
+    "request": "^2.88.0",
     "require-dir-all": "^0.4.15",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
