--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.1.0",
+    "@angular/cdk": "~7.2.0",
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
     "@angular/core": "~7.1.0",
     "@angular/forms": "~7.1.0",
+    "@angular/material": "^7.2.0",
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
@@ -31,6 +33,7 @@
     "csurf": "^1.9.0",
     "express": "^4.16.4",
     "express-validator": "^5.3.0",
+    "hammerjs": "^2.0.8",
     "helmet": "^3.15.0",
     "jsonpath": "^1.0.0",
     "node-cache": "^4.2.0",
