--- a/package.json
+++ b/package.json
@@ -73,6 +73,9 @@
     "tslint": "~5.11.0",
     "typescript": "~3.1.6"
   },
+  "engines": {
+    "node": "10.x"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
