--- a/package.json
+++ b/package.json
@@ -17,27 +17,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.1.0",
-    "@angular/cdk": "~7.2.0",
-    "@angular/common": "~7.1.0",
-    "@angular/compiler": "~7.1.0",
-    "@angular/compiler-cli": "~7.1.0",
-    "@angular/core": "~7.1.0",
-    "@angular/forms": "~7.1.0",
-    "@angular/material": "^7.2.0",
-    "@angular/platform-browser": "~7.1.0",
-    "@angular/platform-browser-dynamic": "~7.1.0",
-    "@angular/router": "~7.1.0",
-    "@mdi/angular-material": "^3.2.89",
+    "@angular/animations": "^7.1.4",
+    "@angular/cdk": "^7.2.1",
+    "@angular/common": "^7.1.4",
+    "@angular/compiler": "^7.1.4",
+    "@angular/compiler-cli": "^7.1.4",
+    "@angular/core": "^7.1.4",
+    "@angular/forms": "^7.1.4",
+    "@angular/material": "^7.2.1",
+    "@angular/platform-browser": "^7.1.4",
+    "@angular/platform-browser-dynamic": "^7.1.4",
+    "@angular/router": "^7.1.4",
+    "@mdi/angular-material": "^3.3.92",
     "body-parser": "^1.18.3",
     "bunyan": "^1.8.12",
     "class-transformer": "^0.2.0",
     "cookie-parser": "^1.4.3",
-    "core-js": "^2.5.4",
+    "core-js": "^2.6.2",
     "cors": "^2.8.5",
     "csurf": "^1.9.0",
     "express": "^4.16.4",
-    "express-validator": "^5.3.0",
+    "express-validator": "^5.3.1",
     "hammerjs": "^2.0.8",
     "helmet": "^3.15.0",
     "jsonpath": "^1.0.0",
@@ -46,21 +46,20 @@
     "require-dir-all": "^0.4.15",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26"
+    "zone.js": "^0.8.28"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.0",
-    "@angular/cli": "~7.1.3",
-    
-    "@angular/language-service": "~7.1.0",
-    "@types/jasmine": "~2.8.8",
+    "@angular-devkit/build-angular": "^0.12.2",
+    "@angular/cli": "^7.1.4",
+    "@angular/language-service": "^7.1.4",
+    "@types/jasmine": "^2.8.14",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
-    "eslint": "^5.10.0",
-    "eslint-config-prettier": "^3.3.0",
-    "eslint-plugin-prettier": "^3.0.0",
-    "husky": "^1.2.1",
+    "eslint": "^5.12.0",
+    "eslint-config-prettier": "^3.5.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "husky": "^1.3.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.1",
@@ -71,7 +70,7 @@
     "lint-staged": "^8.1.0",
     "nodemon": "^1.18.9",
     "prettier": "^1.15.3",
-    "protractor": "~5.4.0",
+    "protractor": "^5.4.2",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.6"
