--- a/package.json
+++ b/package.json
@@ -17,59 +17,59 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.1.4",
-    "@angular/cdk": "^7.2.1",
-    "@angular/common": "^7.1.4",
-    "@angular/compiler": "^7.1.4",
-    "@angular/compiler-cli": "^7.1.4",
-    "@angular/core": "^7.1.4",
-    "@angular/forms": "^7.1.4",
-    "@angular/material": "^7.2.1",
-    "@angular/platform-browser": "^7.1.4",
-    "@angular/platform-browser-dynamic": "^7.1.4",
-    "@angular/router": "^7.1.4",
-    "@mdi/angular-material": "^3.3.92",
+    "@angular/animations": "^7.2.9",
+    "@angular/cdk": "^7.3.4",
+    "@angular/common": "^7.2.9",
+    "@angular/compiler": "^7.2.9",
+    "@angular/compiler-cli": "^7.2.9",
+    "@angular/core": "^7.2.9",
+    "@angular/forms": "^7.2.9",
+    "@angular/material": "^7.3.4",
+    "@angular/platform-browser": "^7.2.9",
+    "@angular/platform-browser-dynamic": "^7.2.9",
+    "@angular/router": "^7.2.9",
+    "@mdi/angular-material": "^3.5.95",
     "body-parser": "^1.18.3",
     "bunyan": "^1.8.12",
     "class-transformer": "^0.2.0",
-    "cookie-parser": "^1.4.3",
-    "core-js": "^2.6.2",
+    "cookie-parser": "^1.4.4",
+    "core-js": "^2.6.5",
     "cors": "^2.8.5",
     "csurf": "^1.9.0",
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
     "hammerjs": "^2.0.8",
-    "helmet": "^3.15.0",
-    "jsonpath": "^1.0.0",
+    "helmet": "^3.16.0",
+    "jsonpath": "^1.0.1",
     "node-cache": "^4.2.0",
     "request": "^2.88.0",
     "require-dir-all": "^0.4.15",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
-    "zone.js": "^0.8.28"
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.12.2",
-    "@angular/cli": "^7.1.4",
-    "@angular/language-service": "^7.1.4",
-    "@types/jasmine": "^2.8.14",
+    "@angular-devkit/build-angular": "^0.12.4",
+    "@angular/cli": "^7.3.6",
+    "@angular/language-service": "^7.2.9",
+    "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
-    "eslint": "^5.12.0",
-    "eslint-config-prettier": "^3.5.0",
+    "eslint": "^5.15.1",
+    "eslint-config-prettier": "^3.6.0",
     "eslint-plugin-prettier": "^3.0.1",
     "husky": "^1.3.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.1",
+    "karma": "^4.0.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "lint-staged": "^8.1.0",
-    "nodemon": "^1.18.9",
-    "prettier": "^1.15.3",
+    "lint-staged": "^8.1.5",
+    "nodemon": "^1.18.10",
+    "prettier": "^1.16.4",
     "protractor": "^5.4.2",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
